# AnalysisTools

./: .gitignore  .gitmodules  AnalysisBase.cc  AnalysisBase.hh  AverageAndError.hh  AveragingHist.hh  Binning.hh  CHANGELOG.md  CMakeLists.txt  COPYING  CorrelationHist.hh  Doxyfile  FastIStringStream.hh  GSLRandom.hh  LockableMap.hh  NEWS.md  NLOHist.hh  NLOHistGeneric.hh  README.md  SimpleHist.hh  SimpleHist2D.hh  SimpleHistWithError.hh  SimpleNTuple.hh
.github/workflows/: main.yml
python/: hfile.py  ntuple.py  poly_interp.py  view-hfile.py
scripts/: auto-combine-runs.pl  combine-runs.pl  mergeidx.pl  rebin.pl  revlines.pl
tests/: .gitignore  CMakeLists.txt  mkmk  test-all-types.cc  test-map-speed.cc
unit-tests/: .gitignore  CMakeLists.txt  mkmk  test_Analysis.cc  test_GSLRandom.cc  test_SimpleHist.cc  test_SimpleHistWithError.cc  unit-tests.cc
